<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/lnTabTop"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tabs_height"
        android:layout_gravity="center"
        android:background="@color/colorTabHome"
        android:orientation="horizontal"
        android:paddingTop="4dp">


        <LinearLayout
            android:id="@+id/ln_tabHot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">


            <TextView
                android:id="@+id/tabHot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/tab_home_hot"
                android:maxLines="1"
                android:textSize="10.5dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ln_tabForYou"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">


            <TextView
                android:id="@+id/tabForYou"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/tab_for_you"
                android:maxLines="1"
                android:textSize="10.5dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ln_tabNew"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">


            <TextView
                android:id="@+id/tabNew"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_home_new"
                android:textSize="10.5dp"
                android:maxLines="1"
                android:textColor="@color/colorPrimaryDark" />

        </LinearLayout>



    </LinearLayout>
    <FrameLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent" />
    <ProgressBar
        android:id="@+id/progress_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="visible" />

    <ProgressBar
        android:id="@+id/progress_loading_more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:visibility="gone" />
</LinearLayout>