<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/scrollView">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/rlGroupInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_border_image_view"
            android:paddingBottom="10dp"
            android:layout_alignParentTop="true">

            <RelativeLayout
                android:id="@+id/rlGroupButtonGetCoupon"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/custom_bg_bt_get_qr"
                android:gravity="center">

                <ImageView
                    android:id="@+id/icQR"
                    android:layout_marginTop="@dimen/size_4dp"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:src="@drawable/ic_qrcode">
                </ImageView>

                <TextView
                    android:id="@+id/tvGetCoupon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/icQR"
                    android:paddingLeft="@dimen/size_10dp"
                    android:textSize="15dp"
                    android:text="@string/txt_getCoupon"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold" />
            </RelativeLayout>

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text=""
                android:textSize="12dp"
                android:layout_below="@+id/rlGroupButtonGetCoupon"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlGroupVendorInfo"
            android:layout_below="@+id/rlGroupInfo"
            android:background="@drawable/custom_border_image_view"
            android:padding="@dimen/size_10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imLogoVendor"
                android:layout_width="@dimen/tvEventPromotionSize"
                android:layout_height="@dimen/tvEventPromotionSize"
                android:background="@drawable/custom_background_vendor"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:padding="5dp"
                android:src="@drawable/ic_house" />

            <TextView
                android:id="@+id/tvVendorName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/imLogoVendor"
                android:paddingTop="@dimen/size_10dp"
                android:paddingLeft="@dimen/size_10dp"
                android:paddingRight="@dimen/size_20dp"
                android:text="Cửa hàng biển đông tại Royal City"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/size_15dp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/tvLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvVendorName"
                android:layout_toRightOf="@+id/imLogoVendor"
                android:paddingLeft="@dimen/size_10dp"
                android:paddingRight="@dimen/size_20dp"
                android:text="@string/txt_vendor_info"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="@dimen/size_12dp" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:id="@+id/btNext"
                android:src="@drawable/bt_next"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlGroupGuide"
            android:layout_below="@+id/rlGroupVendorInfo"
            android:background="@drawable/custom_border_image_view"
            android:padding="@dimen/size_10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imGuide"
                android:layout_width="@dimen/tvEventPromotionSize"
                android:layout_height="@dimen/tvEventPromotionSize"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:padding="5dp"
                android:src="@drawable/ic_guide" />

            <TextView
                android:id="@+id/tvGuide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/imGuide"
                android:paddingTop="@dimen/size_10dp"
                android:paddingLeft="@dimen/size_10dp"
                android:paddingRight="@dimen/size_10dp"
                android:text="@string/txt_guide"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/size_15dp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/tvSubGuide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvGuide"
                android:layout_toRightOf="@+id/imGuide"
                android:paddingLeft="@dimen/size_10dp"
                android:text="@string/txt_sub_guide"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="@dimen/size_12dp" />
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:id="@+id/btGuideNext"
                android:src="@drawable/bt_next"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true" />
        </RelativeLayout>

    </RelativeLayout>

</ScrollView>
